Fix layout issues

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -1,13 +1,9 @@
-$background: #1b3849 //#1f4154
-$highlight: #7F91A5//#567b92 //#648FAA
-//$accent: #78A59E
-$text: #f3f3f3 //#C7E9FF
-$hover-text: #B9A8AD
-$nav-hover: #758698
-
-$font-main: 'Titillium Web', sans-serif
-$font-title: 'Volkhorn SC', serif
-
+$background: #0A203F
+$highlight: #EE8927
+$hover-highlight: #F8AB51
+$text: #E1E5E9
+$header-font: 'Archivo Black', serif
+$content-font: 'Archivo', serif
 $page-margin: 50px 40px
 
 
@@ -25,117 +21,144 @@ body
   background-color: $background
   font-size: 14px
   color: $text
-  font-family: $font-main
 
-  h1
-    margin: $page-margin
-    padding-bottom: 0.2em
-    font-family: $font-title
-    font-size: 3em
+h1
+  font-family: $header-font
+  font-size: 3.2em
 
-  h2
-    font-size: 1.6em
-    padding-bottom: 1.1em
+h2
+  font-family: $content-font
+  font-weight: 700
+  font-size: 1.4em
 
-  p
-    padding-bottom: 1em
+p
+  font-family: $content-font
+  padding-bottom: 1em
 
-  a
-    color: $text
-    text-decoration: none
+a
+  font-family: $content-font
+  color: $highlight
+  text-decoration: none
 
-    &:hover
-      color: $hover-text
-      transition: .4s ease
-    &:active
-      color: $hover-text
+  &:hover
+    color: $hover-highlight
+    transition: .4s ease
+  &:active
+    color: $hover-highlight
 
-.tiles-container
-  margin: $page-margin
-  height: 100%
+button
+  border: none
+  background: $highlight
+  cursor: pointer
+  &:focus
+    outline: 0
+
+// Navigation
+.navigation
   display: flex
-  flex-direction: row
-  flex-flow: nowrap
+  justify-content: flex-end
 
-  .tiles-container > *
-    flex: 1 100%
+.nav-button
+  width: 60px
+  height: 60px
+  margin: 1em 0
+  border-radius: 50%
+  position: fixed
+  z-index: 2
 
-//Nav
-.nav
-  $width: 4.2em
-  $margin: 2em
-  position: absolute
-  top: $margin
-  left: auto
-  right: $margin
-  padding: 0.3em
-  background-color: $highlight
-  width: $width
-  border-radius: $width / 2
+.nav-icon
+  width: 65%
+  height: 50%
+  margin: 0 auto
+  -webkit-transform: rotate(0deg)
+  -moz-transform: rotate(0deg)
+  -o-transform: rotate(0deg)
+  transform: rotate(0deg)
+  -webkit-transition: 0.5s ease-in-out
+  -moz-transition: 0.5s ease-in-out
+  -o-transition: 0.5s ease-in-out
+  transition: 0.5s ease-in-out
+
+  span
+    display: block
+    position: absolute
+    height: 4px
+    width: 100%
+    background: $text
+    border-radius: 10px
+    left: 0
+    -webkit-transform: rotate(0deg)
+    -moz-transform: rotate(0deg)
+    -o-transform: rotate(0deg)
+    transform: rotate(0deg)
+    -webkit-transition: 0.25s ease-in-out
+    -moz-transition: 0.25s ease-in-out
+    -o-transition: 0.25s ease-in-out
+    transition: 0.25s ease-in-out
+
+  span:nth-child(1)
+    top: 4px
+
+  span:nth-child(2),
+  span:nth-child(3)
+    top: 13px
+
+  span:nth-child(4)
+    top: 22px
+
+  &.open span:nth-child(1)
+    top: 10px
+    width: 0%
+    left: 50%
+
+.nav-icon.open span:nth-child(2)
+  -webkit-transform: rotate(45deg)
+  -moz-transform: rotate(45deg)
+  -o-transform: rotate(45deg)
+  transform: rotate(45deg)
+
+.nav-icon.open span:nth-child(3)
+  -webkit-transform: rotate(-45deg)
+  -moz-transform: rotate(-45deg)
+  -o-transform: rotate(-45deg)
+  transform: rotate(-45deg)
+
+.nav-icon.open span:nth-child(4)
+  top: 10px
+  width: 0%
+  left: 50%
+
+.nav-panel
+  display: none
+  width: 100%
+  top: -50px
 
   ul
+    display: flex
+    width: 100%
+    background: rgba(255,255,255,0.23)
+    flex-direction: row
+    justify-content: space-evenly
+    text-decoration: none
     list-style: none
-    padding: 0.75em 0
+    padding: 2rem 4rem
+    position: absolute
+    font-size: 1.2em
 
-    &:hover
-      background-color: $nav-hover
-      border-radius: $width / 2
+.nav-panel.active
+  display: block
+  position: fixed
+  top: 0
 
-  li
-  text-align: center
-  display: inline
-
-  .material-icons
-    font-size: 2.5em
-
-  .nav-text
-    font-size: 0.7em
-
-  a:hover
-    color: $text
-
-    // &:active
-    //   background-color: $nav-hover
-    //   border-radius: $width / 2
-
-//Pages
 #landing-content
-  height: 100%
-  display: flex
-  flex-direction: column
-  justify-content: center
-  align-items: center
+  h1, h2
+    text-align: center
+    padding-bottom: 0.8em
 
-  h1
-    margin: 0
-    padding: 15px 0
+    ul
+      display: flex
+      flex-direction: row
 
-  h2
-    margin: 0
-    font-family: $font-title
 
-  img
-    height: 14em
-    width: 14em
-    border-radius: 50%
-    filter: grayscale(50%)
 
-#portfolio
-  .tiles-container
-    .info-tile
-      //width: 50%
-      //height: auto
-      flex: 1
-      padding: 1.5em
-      //background-color: rgba(255,255,255, 0.2)
-      margin-right: 30px
-
-    .image-tile
-      // width: 50%
-      // height: auto
-      flex: 1
-      background-color: rgba(255,255,255, 0.4)
-
-    img
-      width: 100%
 
